Text size and form margins were adapted to the specs. Fields with success/warning/error were created and added to the demo.

--- a/examples/demo/views/form/form.html
+++ b/examples/demo/views/form/form.html
@@ -32,6 +32,18 @@
             <label>TextArea</label>
             <textarea class="m-textarea" placeholder="Text here"></textarea>
         </div>
+        <div class="m-field m-error">
+            <label>TextArea with error</label>
+            <textarea class="m-textarea" placeholder="Text here"></textarea>
+        </div>
+        <div class="m-field m-warning">
+            <label>TextArea with warning</label>
+            <textarea class="m-textarea" placeholder="Text here"></textarea>
+        </div>
+        <div class="m-field m-success">
+            <label>TextArea with success</label>
+            <textarea class="m-textarea" placeholder="Text here"></textarea>
+        </div>
 
         <div class="m-field">
             <label for="select2">Select</label>
