--- a/source/css/mootor.css
+++ b/source/css/mootor.css
@@ -1,9 +1,10 @@
+@charset "UTF-8";
 /**
  * @summary Mootor CSS
  * @author Emilio Mariscal (emi420 [at] gmail.com)
  * @author Martín Szyszlican (martinsz [at] gmail.com)
  */
-/* line 17, ../../../../../Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 17, ../../../../../.rvm/gems/ruby-2.0.0-p451/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -25,45 +26,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../../Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../.rvm/gems/ruby-2.0.0-p451/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../../Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../.rvm/gems/ruby-2.0.0-p451/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../../Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../.rvm/gems/ruby-2.0.0-p451/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../../Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../.rvm/gems/ruby-2.0.0-p451/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../../Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../.rvm/gems/ruby-2.0.0-p451/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../../Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../../.rvm/gems/ruby-2.0.0-p451/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../../Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../.rvm/gems/ruby-2.0.0-p451/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../../Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../.rvm/gems/ruby-2.0.0-p451/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block;
 }
@@ -135,7 +136,7 @@ html, body {
   background: #cdc9c7;
 }
 /* line 14, _colors.scss */
-.m-app .m-border-color-gray-lighter, .m-app .m-draw-cover, .m-app .m-draw-canvas canvas, .m-app .m-draw-canvas-header,
+.m-app .m-border-color-gray-lighter, .m-app .m-form .m-field, .m-app .m-draw-cover, .m-app .m-draw-canvas canvas, .m-app .m-draw-canvas-header,
 .m-app .m-draw-canvas-footer {
   border-color: #cdc9c7;
 }
@@ -172,7 +173,7 @@ html, body {
   border-color: #968e89;
 }
 /* line 18, _colors.scss */
-.m-app .m-color-gray {
+.m-app .m-color-gray, .m-app .m-text::-webkit-input-placeholder, .m-app .m-textarea::-webkit-input-placeholder, .m-app .m-select::-webkit-input-placeholder {
   color: #968e89;
 }
 /* line 22, _colors.scss */
@@ -292,7 +293,7 @@ html, body {
   color: #316569;
 }
 /* line 10, _colors.scss */
-.m-app .m-bg-color-success-lighter {
+.m-app .m-bg-color-success-lighter, .m-app .m-form .m-field.m-success {
   background: #bde1d5;
 }
 /* line 14, _colors.scss */
@@ -372,7 +373,7 @@ html, body {
   color: #34715c;
 }
 /* line 10, _colors.scss */
-.m-app .m-bg-color-warning-lighter {
+.m-app .m-bg-color-warning-lighter, .m-app .m-form .m-field.m-warning {
   background: #fde86c;
 }
 /* line 14, _colors.scss */
@@ -532,7 +533,7 @@ html, body {
   color: #97570e;
 }
 /* line 10, _colors.scss */
-.m-app .m-bg-color-danger-lighter {
+.m-app .m-bg-color-danger-lighter, .m-app .m-form .m-field.m-error {
   background: #f8a99d;
 }
 /* line 14, _colors.scss */
@@ -681,7 +682,7 @@ html, body {
 .m-app p {
   font-family: 'Helvetica Neue Light', Roboto, sans-serif;
   font-weight: 300;
-  font-size: 14pt;
+  font-size: 14px;
   line-height: 140%;
 }
 /* line 14, _fonts.scss */
@@ -693,7 +694,7 @@ html, body {
   font-family: 'Helvetica Neue Light Italic', Roboto, sans-serif;
   font-style: italic;
   font-weight: 100;
-  font-size: 12pt;
+  font-size: 12px;
 }
 /* line 25, _fonts.scss */
 .m-app a {
@@ -707,30 +708,30 @@ html, body {
 }
 /* line 37, _fonts.scss */
 .m-app h1 {
-  font-size: 16pt;
+  font-size: 16px;
   font-weight: 400;
   font-family: 'Helvetica Neue Medium', Roboto, sans-serif;
 }
 /* line 43, _fonts.scss */
 .m-app h2 {
-  font-size: 14pt;
+  font-size: 14px;
   font-weight: 400;
   font-family: 'Helvetica Neue Medium', Roboto, sans-serif;
 }
 /* line 54, _fonts.scss */
 .m-app h4 {
-  font-size: 12pt;
+  font-size: 12px;
   font-weight: 300;
 }
 /* line 59, _fonts.scss */
 .m-app h5 {
-  font-size: 12pt;
+  font-size: 12px;
   color: #666;
   font-weight: 300;
 }
 /* line 65, _fonts.scss */
 .m-app h6 {
-  font-size: 11pt;
+  font-size: 11px;
   font-family: 'Helvetica Neue Roman', Roboto, sans-serif;
   color: #666;
   font-weight: 100;
@@ -1042,36 +1043,35 @@ html, body {
   animation-name: m-loading-object-animation-2;
   margin-left: 2.5em;
 }
-/* line 39, _uiform.scss */
+/* line 40, _uiform.scss */
 .m-app .m-form .m-form-left-labels .m-field {
   overflow: hidden;
 }
-/* line 42, _uiform.scss */
+/* line 43, _uiform.scss */
 .m-app .m-form .m-form-left-labels .m-field label {
   float: left;
   width: 30%;
+  height: 2.15em;
+  line-height: 2.86em;
 }
-/* line 48, _uiform.scss */
+/* line 51, _uiform.scss */
 .m-app .m-form .m-form-top-labels .m-field label {
   width: 100%;
   display: block;
 }
-/* line 54, _uiform.scss */
+/* line 57, _uiform.scss */
 .m-app .m-form .m-field {
-  padding: 1em;
-  border-bottom: 1px solid #ccc;
+  padding: 0 0.67em 0.67em 0.67em;
+  border-bottom: 1px solid;
   display: block;
 }
-/* line 59, _uiform.scss */
+/* line 63, _uiform.scss */
 .m-app .m-form .m-field label {
   font-weight: bold;
   font-size: 1em;
-  line-height: 1.5em;
+  line-height: 2em;
+  height: 1.43em;
   overflow-wrap: break-word;
-}
-/* line 66, _uiform.scss */
-.m-app .m-form .m-field.m-error label {
-  color: red;
 }
 /* line 3, _uiform.scss */
 .m-app .m-form-left-labels .m-text {
@@ -1089,18 +1089,21 @@ html, body {
   border: none;
   font-family: sans-serif;
   padding: 0;
+  margin: 0.67em 0 0 0;
+  height: 1.43em;
+  line-height: 1.43em;
 }
-/* line 21, _uiform.scss */
+/* line 24, _uiform.scss */
 .m-app .m-text:disabled {
   opacity: 0.2;
 }
-/* line 25, _uiform.scss */
+/* line 28, _uiform.scss */
 .m-app .m-text:focus {
   outline: 0;
 }
-/* line 31, _uiform.scss */
-.m-app .m-field.m-error .m-text {
-  background-color: red;
+/* line 32, _uiform.scss */
+.m-app .m-text::-webkit-input-placeholder {
+  /* WebKit browsers */
 }
 /* line 3, _uiform.scss */
 .m-app .m-form-left-labels .m-textarea {
@@ -1118,18 +1121,21 @@ html, body {
   border: none;
   font-family: sans-serif;
   padding: 0;
+  margin: 0.67em 0 0 0;
+  height: 1.43em;
+  line-height: 1.43em;
 }
-/* line 21, _uiform.scss */
+/* line 24, _uiform.scss */
 .m-app .m-textarea:disabled {
   opacity: 0.2;
 }
-/* line 25, _uiform.scss */
+/* line 28, _uiform.scss */
 .m-app .m-textarea:focus {
   outline: 0;
 }
-/* line 31, _uiform.scss */
-.m-app .m-field.m-error .m-textarea {
-  background-color: red;
+/* line 32, _uiform.scss */
+.m-app .m-textarea::-webkit-input-placeholder {
+  /* WebKit browsers */
 }
 /* line 3, _uiform.scss */
 .m-app .m-form-left-labels .m-select {
@@ -1147,23 +1153,26 @@ html, body {
   border: none;
   font-family: sans-serif;
   padding: 0;
+  margin: 0.67em 0 0 0;
+  height: 1.43em;
+  line-height: 1.43em;
 }
-/* line 21, _uiform.scss */
+/* line 24, _uiform.scss */
 .m-app .m-select:disabled {
   opacity: 0.2;
 }
-/* line 25, _uiform.scss */
+/* line 28, _uiform.scss */
 .m-app .m-select:focus {
   outline: 0;
 }
-/* line 31, _uiform.scss */
-.m-app .m-field.m-error .m-select {
-  background-color: red;
+/* line 32, _uiform.scss */
+.m-app .m-select::-webkit-input-placeholder {
+  /* WebKit browsers */
 }
 /* line 3, _uiformselect.scss */
 .m-app select.m-select {
-  top: -1.7em;
-  margin-bottom: -1.7em;
+  top: -1.4em;
+  margin-bottom: -1.4em;
   opacity: 0.01;
   position: relative;
 }
@@ -1196,7 +1205,7 @@ html, body {
   background: #cdc9c7;
 }
 /* line 14, _colors.scss */
-.m-app .m-border-color-gray-lighter, .m-app .m-draw-cover, .m-app .m-draw-canvas canvas, .m-app .m-draw-canvas-header,
+.m-app .m-border-color-gray-lighter, .m-app .m-form .m-field, .m-app .m-draw-cover, .m-app .m-draw-canvas canvas, .m-app .m-draw-canvas-header,
 .m-app .m-draw-canvas-footer {
   border-color: #cdc9c7;
 }
@@ -1233,7 +1242,7 @@ html, body {
   border-color: #968e89;
 }
 /* line 18, _colors.scss */
-.m-app .m-color-gray {
+.m-app .m-color-gray, .m-app .m-text::-webkit-input-placeholder, .m-app .m-textarea::-webkit-input-placeholder, .m-app .m-select::-webkit-input-placeholder {
   color: #968e89;
 }
 /* line 22, _colors.scss */
@@ -1353,7 +1362,7 @@ html, body {
   color: #316569;
 }
 /* line 10, _colors.scss */
-.m-app .m-bg-color-success-lighter {
+.m-app .m-bg-color-success-lighter, .m-app .m-form .m-field.m-success {
   background: #bde1d5;
 }
 /* line 14, _colors.scss */
@@ -1433,7 +1442,7 @@ html, body {
   color: #34715c;
 }
 /* line 10, _colors.scss */
-.m-app .m-bg-color-warning-lighter {
+.m-app .m-bg-color-warning-lighter, .m-app .m-form .m-field.m-warning {
   background: #fde86c;
 }
 /* line 14, _colors.scss */
@@ -1593,7 +1602,7 @@ html, body {
   color: #97570e;
 }
 /* line 10, _colors.scss */
-.m-app .m-bg-color-danger-lighter {
+.m-app .m-bg-color-danger-lighter, .m-app .m-form .m-field.m-error {
   background: #f8a99d;
 }
 /* line 14, _colors.scss */
