--- a/examples/demo/views/form/form.html
+++ b/examples/demo/views/form/form.html
@@ -2,6 +2,19 @@
     <fieldset class="m-form-top-labels">
 
         <div class="m-field">
+            <label for="select2">Select</label>
+            <select class="m-select" id="select2">
+                <option value="01">Option 1</option>
+                <option value="02" selected>Option 2</option>
+                <option value="03">Option 3</option>
+            </select>
+        </div>
+
+        <div class="m-field">
+            <input class="m-text" placeholder="Text without label" />
+        </div>
+
+        <div class="m-field">
             <label>Text</label>
             <input class="m-text" placeholder="Text here" />
         </div>
@@ -10,18 +23,19 @@
             <label>TextArea</label>
             <textarea class="m-textarea" placeholder="Text here"></textarea>
         </div>
+    </fieldset>
+
+    <fieldset class="m-form-left-labels">
+
 
         <div class="m-field">
-            <label for="select1">Select</label>
+            <label for="01">Select</label>
             <select class="m-select" id="select1">
                 <option value="01">Option 1</option>
                 <option value="02" selected>Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2</option>
                 <option value="03">Option 3</option>
             </select>
         </div>
-    </fieldset>
-
-    <fieldset class="m-form-left-labels">
 
         <div class="m-field">
             <label>Text</label>
@@ -45,14 +59,6 @@
             <textarea class="m-textarea" placeholder="Text here"></textarea>
         </div>
 
-        <div class="m-field">
-            <label for="select2">Select</label>
-            <select class="m-select" id="select2">
-                <option value="01">Option 1</option>
-                <option value="02" selected>Option 2</option>
-                <option value="03">Option 3</option>
-            </select>
-        </div>
         
         <input type="submit" class="m-button" />
     </fieldset>
