+ Improvements for UIForm controls, code draft for new control UIFormCamera

--- a/source/css/mootor.scss
+++ b/source/css/mootor.scss
@@ -23,6 +23,7 @@ html, body {
 	@import "uinavbar";
 	@import "uiloading";
 	@import "uiform";
+	@import "uiformcamera";
 	@import "utils";
 	@import "list";
 }
