--- a/source/css/_utils.scss
+++ b/source/css/_utils.scss
@@ -34,6 +34,7 @@ $default-padding: .5em 1em;
     padding: $default-padding;
 }
 
+// FIXME CHECK
 .m-doc {
 	&,* {
 		border: 1px solid black !important;
