--- a/examples/demo/views/form/form.html
+++ b/examples/demo/views/form/form.html
@@ -2,12 +2,21 @@
     <fieldset class="m-form-top-labels">
 
         <div class="m-field">
+            <input name="radiogroup" id="radio1" checked="true" value="01" type="radio" class="m-option" />
+            <label for="radio1">Radio 1</label>
+            <input name="radiogroup" id="radio2" value="02" type="radio" class="m-option" />
+            <label for="radio2">Radio 2</label>
+            <input name="radiogroup" id="radio3" value="03" type="radio" class="m-option" />
+            <label for="radio3">Radio 3</label>
+        </div>
+
+        <div class="m-field">
             <input id="checkbox0" checked="checked" value="Check value 1" type="checkbox" class="m-checkbox" />
             <label for="checkbox0">Single checkbox</label>
         </div>
 
         <div class="m-field">
-            <input id="checkbox1" checked="checked" value="Check value 2" type="checkbox" class="m-checkbox" />
+            <input id="checkbox1" checked="true" value="Check value 2" type="checkbox" class="m-checkbox" />
             <label for="checkbox1">Multiple check 1</label>
             <input id="checkbox2" value="Check value 2" type="checkbox" class="m-checkbox" />
             <label for="checkbox2">Multiple check 2</label>
