--- a/source/css/normalize.scss
+++ b/source/css/normalize.scss
@@ -5,7 +5,9 @@ input, input:focus,
 select, select:focus,
 textarea, textarea:focus { 
    outline: none;
-   -webkit-tap-highlight-color: rgba(255, 255, 255, 0); 
+   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+   // Firefox OS 
+   background: linear-gradient(to bottom,transparent,transparent);
 }
 
 // Removes inner padding and search cancel button
