--- a/demo/views/form/form.html
+++ b/demo/views/form/form.html
@@ -1,6 +1,16 @@
 <form class="m-form">
     <fieldset class="m-form-top-labels">
 
+        <!--<div class="m-field">
+            <label>Date</label>
+            <input type="date" class="m-date" />
+        </div>
+
+        <div class="m-field">
+            <label>Time</label>
+            <input class="m-time" type="time" placeholder="Text here" />
+        </div>-->
+        
         <div class="m-field">
             <input id="checkbox1" checked="true" value="Check value 2" type="checkbox" class="m-checkbox" />
             <label for="checkbox1">Multiple check 1</label>
@@ -19,6 +29,7 @@
             </select>
         </div>
 
+
         <div class="m-field">
             <input name="radiogroup" id="radio1" checked="true" value="01" type="radio" class="m-option" />
             <label for="radio1">Radio 1</label>
@@ -27,7 +38,7 @@
             <input name="radiogroup" id="radio3" value="03" type="radio" class="m-option" />
             <label for="radio3">Radio 3</label>
         </div>
-
+        
         <div class="m-field">
             <label>Text</label>
             <input class="m-text" placeholder="Text here" />
@@ -37,6 +48,9 @@
             <label>TextArea</label>
             <textarea class="m-textarea" placeholder="Text here"></textarea>
         </div>
+
+
+
     </fieldset>
 
     <fieldset class="m-form-left-labels">
@@ -45,8 +59,8 @@
         <div class="m-field">
             <label for="01">Select</label>
             <select class="m-select" id="select1">
-                <option value="01">Option 1</option>
-                <option value="02" selected>Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2</option>
+                <option value="01" selected>Option 1</option>
+                <option value="02">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit</option>
                 <option value="03">Option 3</option>
             </select>
         </div>
