+ Bugfixes. + Draft for UIFormTime,UIFormDate

--- a/examples/demo/views/form/form.html
+++ b/examples/demo/views/form/form.html
@@ -1,6 +1,16 @@
 <form class="m-form">
     <fieldset class="m-form-top-labels">
 
+        <!--<div class="m-field">
+            <label>Date</label>
+            <input type="date" class="m-date" />
+        </div>
+
+        <div class="m-field">
+            <label>Time</label>
+            <input class="m-time" type="time" placeholder="Text here" />
+        </div>-->
+        
         <div class="m-field">
             <input id="checkbox1" checked="true" value="Check value 2" type="checkbox" class="m-checkbox" />
             <label for="checkbox1">Multiple check 1</label>
@@ -38,6 +48,9 @@
             <label>TextArea</label>
             <textarea class="m-textarea" placeholder="Text here"></textarea>
         </div>
+
+
+
     </fieldset>
 
     <fieldset class="m-form-left-labels">
@@ -46,8 +59,8 @@
         <div class="m-field">
             <label for="01">Select</label>
             <select class="m-select" id="select1">
-                <option value="01">Option 1</option>
-                <option value="02" selected>Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2</option>
+                <option value="01" selected>Option 1</option>
+                <option value="02">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit</option>
                 <option value="03">Option 3</option>
             </select>
         </div>
