--- a/examples/demo/views/form/form.html
+++ b/examples/demo/views/form/form.html
@@ -1,15 +1,36 @@
 <form class="m-form">
     <fieldset class="m-form-top-labels">
 
-        <!--<div class="m-field">
+        <div class="m-field">
             <label>Date</label>
-            <input type="date" class="m-date" />
+            <input type="date" class="m-date" placeholder="Date here" />
         </div>
 
         <div class="m-field">
             <label>Time</label>
-            <input class="m-time" type="time" placeholder="Text here" />
-        </div>-->
+            <input class="m-time" type="time" placeholder="Time here" />
+        </div>
+
+        <div class="m-field">
+            <label>Month</label>
+            <input type="month" class="m-date" type="time" placeholder="Month here" />
+        </div>
+        
+        <div class="m-field">
+            <label>Phone</label>
+            <input type="tel" class="m-text" placeholder="Phone here" />
+        </div>
+
+        <div class="m-field">
+            <label>E-mail</label>
+            <input type="email" class="m-text" placeholder="E-mail here" />
+        </div>
+
+        <div class="m-field">
+            <label>Number</label>
+            <input type="number" class="m-text" placeholder="Number here" />
+        </div>
+
         
         <div class="m-field">
             <input id="checkbox1" checked="true" value="Check value 2" type="checkbox" class="m-checkbox" />
