--- a/source/css/_uiformdate.scss
+++ b/source/css/_uiformdate.scss
@@ -1,4 +1,5 @@
-input[type=date].m-date {
+input[type=date].m-date-hidden,
+input[type=month].m-date-hidden {
 	opacity: 0.001;
     top: 0;
     width: 100%;
@@ -6,3 +7,13 @@ input[type=date].m-date {
     top: 2.4em;
 }
 
+
+input[type=date].m-date,
+input[type=month].m-date {
+    margin-left: 10px;
+    width: 100%;
+    border: 0;
+    margin-bottom: 10px;
+    padding: 0;
+    font-size: 1em;
+}
