Updated doc. Improvements and bugfixes on UIForm

--- a/examples/demo/views/form/form.html
+++ b/examples/demo/views/form/form.html
@@ -1,4 +1,4 @@
-<form class="m-form">
+<form id="myForm" class="m-form">
     <fieldset class="m-form-top-labels">
 
         <div class="m-field">
@@ -112,6 +112,10 @@
 
     <div class="m-field">
         <input class="m-text" placeholder="Text without label" />
+    </div>
+    
+    <div class="m-field">
+        <button type="submit" class="m-button m-button-success m-button-block">Submit this form</button>
     </div>
 
 </form>
