--- a/source/css/mootor.scss
+++ b/source/css/mootor.scss
@@ -15,7 +15,7 @@ html, body {
 .m-app {
 
     @import "normalize";
-    @import "fonts";
+    @import "text";
 	@import "uipanel";
 	@import "uibutton";
 	@import "uiheader";
