--- a/source/css/_text.scss
+++ b/source/css/_text.scss
@@ -1,5 +1,3 @@
-/* This is temporary! */
-@import url(http://fonts.googleapis.com/css?family=Roboto:100,Roboto:300,300italic,400italic,400,700,700italic);
 @import "colors";
 
 &,
@@ -7,6 +5,7 @@ p {
     font-family: 'Helvetica Neue Light', Roboto, sans-serif;
     font-weight: 300;
     font-size: 14px;
+    margin-bottom: 1em;
     line-height: 140%;
     @extend .m-color-black;
 }
@@ -30,34 +29,43 @@ a {
 }
 
 
-h1,h2,h3,h4,h5,h6 {
-	line-height: 200%;	
+h2,h3,h4,h5,h6 {
+    margin-bottom: .7em;
+	line-height: 150%;	
 }
 
 h1 {
-    font-size: 16px;
+    font-size: 1.6em;
+    margin-bottom: .7em;
+    margin-top: .5em;
+    
+    line-height: 140%;
     font-weight: 400;
     font-family: 'Helvetica Neue Medium', Roboto, sans-serif;
+    strong {
+        font-weight: 800;
+    }
 }
 
 h2 {
-    font-size: 14px;
+    font-size: 1.3em;
     font-weight: 400;
     font-family: 'Helvetica Neue Medium', Roboto, sans-serif;
 }
 
 h3 {
-
+    font-size: 1.1em;
+    font-weight: 400;
 }
 
 
 h4 {
-    font-size: 12px;
+    font-size: 1em;
     font-weight: 300;
 }
 
 h5 {
-    font-size: 12px;
+    font-size: .9em;
     color: #666;
     font-weight: 300;
 }
