--- a/source/css/_uiform.scss
+++ b/source/css/_uiform.scss
@@ -21,7 +21,7 @@
         padding-top: 0.5em;
         padding-bottom: 1em;
         
-        @if $class != "m-checkbox" and $class != "m-option"{
+        @if $class != "m-checkbox" and $class != "m-option" and $class != "m-select"{
             padding-left: 0.67em;
         } 
 
@@ -74,6 +74,11 @@
             font-size: 1em;
             overflow-wrap: break-word;
         }
+        
+        a,button,h1,h2,h3,h4,h5,h6,legend,span {
+            margin-left: 0.67em;
+        }
+        
         &.m-error {
             @extend .m-bg-color-danger-lighter;
         }
